# SudoRS

./: .gitignore  Cargo.toml  PKGBUILD  README.md  config.default.toml  config.toml
src/: config.rs  main.rs  runner.rs
